--- a/src/solutions/hotels/index.html
+++ b/src/solutions/hotels/index.html
@@ -738,41 +738,43 @@
           </div>
         </div>
       </section>
-      <div
-        class="container-w bg-green-demo high-sm:rounded-full !mx-4 !my-40 flex flex-col items-center justify-between rounded-2xl bg-[#EAF7F0] bg-cover bg-center bg-no-repeat md:flex-row"
-      >
+      <div class="mx-4">
         <div
-          class="flex flex-col items-center gap-3 p-3 font-medium sm:flex-row"
+          class="container-w bg-green-demo high-sm:rounded-full !mx-auto !my-40 flex flex-col items-center justify-between rounded-2xl bg-[#EAF7F0] bg-cover bg-center bg-no-repeat md:flex-row md:bg-transparent"
         >
-          <img class="p-3" width="100" src="/assets/images/gr.png" alt="" />
-          <p>
-            راهکـــار PMS ما برای کمک به هتل‌ها در افزایش نرخ اشغال، ساده‌سازی
-            عملیات <br />و ارائه یک تجربه مهمان برتر طراحی شده است.
-          </p>
-        </div>
-        <div>
+          <div
+            class="flex flex-col items-center gap-3 p-3 font-medium sm:flex-row"
+          >
+            <img class="p-3" width="100" src="/assets/images/gr.png" alt="" />
+            <p>
+              راهکـــار PMS ما برای کمک به هتل‌ها در افزایش نرخ اشغال، ساده‌سازی
+              عملیات <br />و ارائه یک تجربه مهمان برتر طراحی شده است.
+            </p>
+          </div>
           <div>
-            <button
-              class="mb-3 ml-5 flex items-center gap-2 rounded-full border border-white bg-green-600 p-1 px-2 font-bold text-white md:bg-transparent"
-            >
-              درخواست دمو<svg
-                width="30"
-                height="30"
-                viewBox="0 0 34 34"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
+            <div>
+              <button
+                class="mb-3 ml-5 flex items-center gap-2 rounded-full border border-white bg-green-600 p-1 px-2 font-bold text-white md:bg-transparent"
               >
-                <path
-                  opacity="0.5"
-                  d="M17.0002 31.1668C9.17591 31.1668 2.8335 24.8244 2.8335 17.0002C2.8335 9.17591 9.17591 2.8335 17.0002 2.8335C24.8244 2.8335 31.1668 9.17591 31.1668 17.0002C31.1668 24.8244 24.8244 31.1668 17.0002 31.1668Z"
-                  fill="white"
-                />
-                <path
-                  d="M18.3742 11.9993C18.4715 11.8949 18.5888 11.8112 18.7191 11.7531C18.8494 11.695 18.9901 11.6638 19.1328 11.6613C19.2755 11.6588 19.4172 11.685 19.5495 11.7385C19.6818 11.7919 19.802 11.8714 19.9028 11.9723C20.0037 12.0732 20.0833 12.1934 20.1367 12.3257C20.1902 12.458 20.2164 12.5997 20.2139 12.7424C20.2114 12.885 20.1801 13.0257 20.1221 13.1561C20.064 13.2864 19.9803 13.4037 19.8759 13.501L16.3767 17.0001L19.8759 20.4993C19.9803 20.5966 20.064 20.7139 20.1221 20.8442C20.1801 20.9745 20.2114 21.1152 20.2139 21.2579C20.2164 21.4006 20.1902 21.5423 20.1367 21.6746C20.0833 21.8069 20.0037 21.927 19.9028 22.0279C19.802 22.1288 19.6818 22.2084 19.5495 22.2618C19.4172 22.3152 19.2755 22.3415 19.1328 22.339C18.9901 22.3365 18.8494 22.3052 18.7191 22.2472C18.5888 22.1891 18.4715 22.1054 18.3742 22.001L14.1242 17.751C13.9252 17.5518 13.8135 17.2817 13.8135 17.0001C13.8135 16.7186 13.9252 16.4485 14.1242 16.2493L18.3742 11.9993Z"
-                  fill="white"
-                />
-              </svg>
-            </button>
+                درخواست دمو<svg
+                  width="30"
+                  height="30"
+                  viewBox="0 0 34 34"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    opacity="0.5"
+                    d="M17.0002 31.1668C9.17591 31.1668 2.8335 24.8244 2.8335 17.0002C2.8335 9.17591 9.17591 2.8335 17.0002 2.8335C24.8244 2.8335 31.1668 9.17591 31.1668 17.0002C31.1668 24.8244 24.8244 31.1668 17.0002 31.1668Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M18.3742 11.9993C18.4715 11.8949 18.5888 11.8112 18.7191 11.7531C18.8494 11.695 18.9901 11.6638 19.1328 11.6613C19.2755 11.6588 19.4172 11.685 19.5495 11.7385C19.6818 11.7919 19.802 11.8714 19.9028 11.9723C20.0037 12.0732 20.0833 12.1934 20.1367 12.3257C20.1902 12.458 20.2164 12.5997 20.2139 12.7424C20.2114 12.885 20.1801 13.0257 20.1221 13.1561C20.064 13.2864 19.9803 13.4037 19.8759 13.501L16.3767 17.0001L19.8759 20.4993C19.9803 20.5966 20.064 20.7139 20.1221 20.8442C20.1801 20.9745 20.2114 21.1152 20.2139 21.2579C20.2164 21.4006 20.1902 21.5423 20.1367 21.6746C20.0833 21.8069 20.0037 21.927 19.9028 22.0279C19.802 22.1288 19.6818 22.2084 19.5495 22.2618C19.4172 22.3152 19.2755 22.3415 19.1328 22.339C18.9901 22.3365 18.8494 22.3052 18.7191 22.2472C18.5888 22.1891 18.4715 22.1054 18.3742 22.001L14.1242 17.751C13.9252 17.5518 13.8135 17.2817 13.8135 17.0001C13.8135 16.7186 13.9252 16.4485 14.1242 16.2493L18.3742 11.9993Z"
+                    fill="white"
+                  />
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
       </div>
