--- a/src/solutions/management-of-chain-hotels/index.html
+++ b/src/solutions/management-of-chain-hotels/index.html
@@ -290,13 +290,13 @@
           <div class="relative flex basis-full flex-col justify-between">
             <div class="block h-[25rem] lg:hidden">
               <div
-                class="high-sm:-left-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-l-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center rounded-3xl rounded-r-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center rounded-3xl rounded-r-[100vw] bg-gray-50 high-sm:absolute high-sm:-left-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-l-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:ml-10 high-sm:mr-0 w-full space-y-4 p-6 font-medium md:ml-2 lg:ml-12"
+                  class="w-full space-y-4 p-6 font-medium high-sm:ml-10 high-sm:mr-0 md:ml-2 lg:ml-12"
                 >
                   <h2
-                    class="high-sm:text-3xl text-center text-2xl font-extrabold"
+                    class="text-center text-2xl font-extrabold high-sm:text-3xl"
                   >
                     گزارش‌گیری تلفیقی
                   </h2>
@@ -328,13 +328,13 @@
             </div>
             <div class="block h-[25rem]">
               <div
-                class="high-sm:-left-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-l-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-r-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-r-[100vw] bg-gray-50 high-sm:absolute high-sm:-left-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-l-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:ml-0 w-full space-y-4 p-6 font-medium md:ml-2 lg:ml-12 lg:mr-20"
+                  class="w-full space-y-4 p-6 font-medium high-sm:ml-0 md:ml-2 lg:ml-12 lg:mr-20"
                 >
                   <h2
-                    class="high-sm:text-3xl text-center text-2xl font-extrabold lg:text-right"
+                    class="text-center text-2xl font-extrabold high-sm:text-3xl lg:text-right"
                   >
                     جریان‌های کاری <br class="block lg:hidden" />
                     استاندارد
@@ -379,13 +379,13 @@
             </div>
             <div class="block h-[25rem] lg:hidden">
               <div
-                class="high-sm:-left-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-l-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-r-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-r-[100vw] bg-gray-50 high-sm:absolute high-sm:-left-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-l-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:ml-10 high-sm:mr-0 w-full space-y-4 p-6 font-medium md:ml-2 lg:ml-12"
+                  class="w-full space-y-4 p-6 font-medium high-sm:ml-10 high-sm:mr-0 md:ml-2 lg:ml-12"
                 >
                   <h2
-                    class="high-sm:text-3xl text-center text-2xl font-extrabold"
+                    class="text-center text-2xl font-extrabold high-sm:text-3xl"
                   >
                     مدیریت داده‌های <br />
                     متمرکز
@@ -411,9 +411,9 @@
           </div>
           <div class="flex justify-between">
             <div
-              class="high-sm:relative high-sm:my-24 absolute left-0 right-0 flex h-[1110px] flex-col items-center justify-between bg-line bg-center bg-no-repeat lg:h-[1029px]"
+              class="absolute left-0 right-0 flex h-[1110px] flex-col items-center justify-between bg-line bg-center bg-no-repeat high-sm:relative high-sm:my-24 lg:h-[1029px]"
             >
-              <div class="high-sm:mt-0 mt-40 rounded-full bg-white p-4">
+              <div class="mt-40 rounded-full bg-white p-4 high-sm:mt-0">
                 <div
                   class="flex size-[122px] items-center justify-center rounded-full bg-orange-400 text-center text-6xl font-extrabold text-white"
                 >
@@ -440,10 +440,10 @@
           <div class="relative flex basis-full flex-col justify-between">
             <div class="h-[25rem]">
               <div
-                class="high-sm:-right-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-r-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 high-sm:absolute high-sm:-right-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-r-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:mr-12 ml-4 w-full space-y-4 p-6 font-medium lg:ml-12"
+                  class="ml-4 w-full space-y-4 p-6 font-medium high-sm:mr-12 lg:ml-12"
                 >
                   <h2
                     class="hidden p-[1.2rem] text-3xl font-extrabold lg:block"
@@ -456,7 +456,7 @@
                   </p>
                 </div>
                 <svg
-                  class="high-sm:hidden absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
+                  class="absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block high-sm:hidden lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
                   width="126"
                   height="124"
                   viewBox="0 0 126 129"
@@ -477,10 +477,10 @@
             </div>
             <div class="block h-[25rem] lg:hidden">
               <div
-                class="high-sm:-right-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-r-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 high-sm:absolute high-sm:-right-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-r-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:mr-12 ml-4 w-full space-y-4 p-6 font-medium lg:ml-12"
+                  class="ml-4 w-full space-y-4 p-6 font-medium high-sm:mr-12 lg:ml-12"
                 >
                   <h2
                     class="hidden p-[1.2rem] text-3xl font-extrabold lg:block"
@@ -493,7 +493,7 @@
                   </p>
                 </div>
                 <svg
-                  class="high-sm:hidden absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
+                  class="absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block high-sm:hidden lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
                   width="126"
                   height="124"
                   viewBox="0 0 126 129"
@@ -511,10 +511,10 @@
             </div>
             <div class="h-[25rem]">
               <div
-                class="high-sm:-right-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-r-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 high-sm:absolute high-sm:-right-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-r-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:mr-12 ml-4 w-full space-y-4 p-6 font-medium lg:ml-12"
+                  class="ml-4 w-full space-y-4 p-6 font-medium high-sm:mr-12 lg:ml-12"
                 >
                   <h2
                     class="hidden p-[1.2rem] text-3xl font-extrabold lg:block"
@@ -527,7 +527,7 @@
                   </p>
                 </div>
                 <svg
-                  class="high-sm:hidden absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
+                  class="absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block high-sm:hidden lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
                   width="126"
                   height="124"
                   viewBox="0 0 126 129"
@@ -549,7 +549,7 @@
 
       <div style="margin-inline: 1rem">
         <div
-          class="container-w bg-green-demo high-sm:rounded-full !mx-auto !my-40 flex flex-col items-center justify-between rounded-2xl bg-[#EAF7F0] bg-cover bg-center bg-no-repeat md:flex-row md:bg-transparent"
+          class="container-w !mx-auto !my-40 flex flex-col items-center justify-between rounded-2xl bg-[#EAF7F0] bg-green-demo bg-cover bg-center bg-no-repeat high-sm:rounded-full md:flex-row md:bg-transparent"
         >
           <div
             class="flex flex-col items-center gap-3 p-3 font-medium sm:flex-row"
