--- a/src/prices/index.html
+++ b/src/prices/index.html
@@ -348,7 +348,7 @@
             </div>
 
             <div
-              class="-order-1 m-auto mb-16 flex w-fit gap-2 rounded-full bg-gray-100 px-1 py-2 font-medium text-white md:order-1 md:m-0 md:mb-0 md:w-auto dark:bg-gray-950"
+              class="-order-1 m-auto mb-16 flex w-fit gap-2 rounded-full bg-gray-950 px-1 py-2 font-medium text-white md:order-1 md:m-0 md:mb-0 md:w-auto"
             >
               <div>
                 <input
