--- a/src/prices/index.html
+++ b/src/prices/index.html
@@ -381,10 +381,10 @@
           </form>
           <div
             style="background-size: 100%"
-            class="bg-prices-bg-small md:bg-prices-bg mt-20 min-h-[15rem] rounded-3xl bg-center bg-no-repeat"
+            class="bg-prices-bg-small md:bg-prices-bg mt-20 min-h-[15rem] rounded-3xl bg-bottom bg-no-repeat md:bg-center"
           >
             <div class="max-w-[35rem] space-y-8 px-3 py-6">
-              <h1 class="text-3xl font-extrabold">هتل های 3 تا 5 ستاره</h1>
+              <h1 class="mt-4 text-3xl font-extrabold">هتل های 3 تا 5 ستاره</h1>
               <p>
                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
                 استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله
