--- a/src/prices/index.html
+++ b/src/prices/index.html
@@ -8,6 +8,9 @@
     <script defer type="module" src="/assets/ts/prices.ts"></script>
   </head>
   <body>
+    <div class="absolute left-0 -z-10 hidden md:block">
+      <img class="h-[1300px]" src="/assets/images/first-pattern.png" alt="" />
+    </div>
     <header class="space-y-5">
       <div class="hidden border-b py-5 *:text-gray-300 sm:block">
         <div class="container-w m-auto flex items-center justify-between">
@@ -218,7 +221,7 @@
           </div>
         </div>
       </nav>
-      <div class="border-y">
+      <div class="z-50 border-y bg-white">
         <div class="container-w flex items-center gap-3 p-3">
           <svg
             width="18"
@@ -391,6 +394,13 @@
                 در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی.
               </p>
             </div>
+            <div class="absolute right-0 -z-10 hidden md:block">
+              <img
+                class="h-[1100px]"
+                src="/assets/images/pattern-2.png"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </section>
@@ -398,7 +408,7 @@
         <div class="splide__track">
           <ul class="splide__list">
             <li class="splide__slide">
-              <div class="rounded-3xl border border-black p-3">
+              <div class="rounded-3xl border border-black bg-white p-3">
                 <div>
                   <h1 class="mt-16 text-xl font-extrabold">حرفه ای</h1>
                   <p class="text-gray-500">
@@ -519,7 +529,7 @@
               </div>
             </li>
             <li class="splide__slide">
-              <div class="rounded-3xl border border-black p-3">
+              <div class="rounded-3xl border border-black bg-white p-3">
                 <div>
                   <h1 class="mt-16 text-xl font-extrabold">حرفه ای</h1>
                   <p class="text-gray-500">
