--- a/src/solutions/hotels/index.html
+++ b/src/solutions/hotels/index.html
@@ -65,12 +65,12 @@
           <li
             class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
           >
-            <a href="solutions.html">راهکار ها</a>
+            <a href="/solutions/">راهکار ها</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="">قیمت ها</a>
+            <a href="/prices/">قیمت ها</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -130,21 +130,21 @@
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">صفحه اصلی</a>
+                      <a href="/">صفحه اصلی</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
                       <a
                         class="active relative text-black after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
-                        href="solutions.html"
+                        href="/solutions/"
                         >راهکار ها</a
                       >
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">قیمت ها</a>
+                      <a href="/prices">قیمت ها</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -224,7 +224,7 @@
           </div>
         </div>
       </nav>
-      <div class="border-y">
+      <div class="border-y bg-white">
         <div class="container-w flex items-center gap-3 p-3">
           <svg
             width="18"
@@ -257,7 +257,7 @@
           </p>
           <a
             class="font-medium text-gray-800 transition-all duration-700 hover:brightness-50"
-            href="solutions.html"
+            href="/solutions/"
             >راهکار ها</a
           >
           <p
@@ -265,7 +265,7 @@
           >
             /
           </p>
-          <a class="font-bold" href="../hotels/">هتل ها</a>
+          <a class="font-bold" href="/solutions/hotels/">هتل ها</a>
         </div>
       </div>
     </header>
@@ -284,13 +284,13 @@
           <div class="relative flex basis-full flex-col justify-between">
             <div class="block h-[25rem] lg:hidden">
               <div
-                class="high-sm:-left-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-l-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center rounded-3xl rounded-r-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center rounded-3xl rounded-r-[100vw] bg-gray-50 high-sm:absolute high-sm:-left-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-l-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:ml-10 high-sm:mr-0 w-full space-y-4 p-6 font-medium md:ml-2 lg:ml-12"
+                  class="w-full space-y-4 p-6 font-medium high-sm:ml-10 high-sm:mr-0 md:ml-2 lg:ml-12"
                 >
                   <h2
-                    class="high-sm:text-3xl text-center text-2xl font-extrabold"
+                    class="text-center text-2xl font-extrabold high-sm:text-3xl"
                   >
                     سیستم مدیریت <br />دارایی (PMS)
                   </h2>
@@ -322,13 +322,13 @@
             </div>
             <div class="block h-[25rem]">
               <div
-                class="high-sm:-left-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-l-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-r-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-r-[100vw] bg-gray-50 high-sm:absolute high-sm:-left-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-l-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:ml-0 w-full space-y-4 p-6 font-medium md:ml-2 lg:ml-12 lg:mr-20"
+                  class="w-full space-y-4 p-6 font-medium high-sm:ml-0 md:ml-2 lg:ml-12 lg:mr-20"
                 >
                   <h2
-                    class="high-sm:text-3xl text-center text-2xl font-extrabold lg:text-right"
+                    class="text-center text-2xl font-extrabold high-sm:text-3xl lg:text-right"
                   >
                     سیستم <br class="lg:hidden" />رزرو مرکزی (CRS)
                   </h2>
@@ -372,13 +372,13 @@
             </div>
             <div class="block h-[25rem] lg:hidden">
               <div
-                class="high-sm:-left-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-l-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-r-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-r-[100vw] bg-gray-50 high-sm:absolute high-sm:-left-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-l-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:ml-10 high-sm:mr-0 w-full space-y-4 p-6 font-medium md:ml-2 lg:ml-12"
+                  class="w-full space-y-4 p-6 font-medium high-sm:ml-10 high-sm:mr-0 md:ml-2 lg:ml-12"
                 >
                   <h2
-                    class="high-sm:text-3xl text-center text-2xl font-extrabold"
+                    class="text-center text-2xl font-extrabold high-sm:text-3xl"
                   >
                     سیستم مدیریت<br />
                     کانال (CMS)
@@ -404,9 +404,9 @@
           </div>
           <div class="flex justify-between">
             <div
-              class="high-sm:relative high-sm:my-24 absolute left-0 right-0 flex h-[1110px] flex-col items-center justify-between bg-line bg-center bg-no-repeat lg:h-[1029px]"
+              class="absolute left-0 right-0 flex h-[1110px] flex-col items-center justify-between bg-line bg-center bg-no-repeat high-sm:relative high-sm:my-24 lg:h-[1029px]"
             >
-              <div class="high-sm:mt-0 mt-40 rounded-full bg-white p-4">
+              <div class="mt-40 rounded-full bg-white p-4 high-sm:mt-0">
                 <div
                   class="flex size-[122px] items-center justify-center rounded-full bg-orange-400 text-center text-6xl font-extrabold text-white"
                 >
@@ -433,10 +433,10 @@
           <div class="relative flex basis-full flex-col justify-between">
             <div class="h-[25rem]">
               <div
-                class="high-sm:-right-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-r-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 high-sm:absolute high-sm:-right-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-r-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:mr-12 ml-4 w-full space-y-4 p-6 font-medium lg:ml-12"
+                  class="ml-4 w-full space-y-4 p-6 font-medium high-sm:mr-12 lg:ml-12"
                 >
                   <h2
                     class="hidden p-[1.2rem] text-3xl font-extrabold lg:block"
@@ -449,7 +449,7 @@
                   </p>
                 </div>
                 <svg
-                  class="high-sm:hidden absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
+                  class="absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block high-sm:hidden lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
                   width="126"
                   height="124"
                   viewBox="0 0 126 129"
@@ -470,10 +470,10 @@
             </div>
             <div class="block h-[25rem] lg:hidden">
               <div
-                class="high-sm:-right-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-r-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 high-sm:absolute high-sm:-right-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-r-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:mr-12 ml-4 w-full space-y-4 p-6 font-medium lg:ml-12"
+                  class="ml-4 w-full space-y-4 p-6 font-medium high-sm:mr-12 lg:ml-12"
                 >
                   <h2
                     class="hidden p-[1.2rem] text-3xl font-extrabold lg:block"
@@ -486,7 +486,7 @@
                   </p>
                 </div>
                 <svg
-                  class="high-sm:hidden absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
+                  class="absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block high-sm:hidden lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
                   width="126"
                   height="124"
                   viewBox="0 0 126 129"
@@ -504,10 +504,10 @@
             </div>
             <div class="h-[25rem]">
               <div
-                class="high-sm:-right-14 high-sm:w-[41vw] high-sm:h-[25rem] high-sm:mr-3 high-sm:rounded-r-[18rem] high-sm:border high-sm:absolute relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 lg:border-0"
+                class="relative -z-10 flex h-[11rem] items-center justify-center overflow-hidden rounded-3xl rounded-l-[100vw] bg-gray-50 high-sm:absolute high-sm:-right-14 high-sm:mr-3 high-sm:h-[25rem] high-sm:w-[41vw] high-sm:rounded-r-[18rem] high-sm:border lg:border-0"
               >
                 <div
-                  class="high-sm:mr-12 ml-4 w-full space-y-4 p-6 font-medium lg:ml-12"
+                  class="ml-4 w-full space-y-4 p-6 font-medium high-sm:mr-12 lg:ml-12"
                 >
                   <h2
                     class="hidden p-[1.2rem] text-3xl font-extrabold lg:block"
@@ -520,7 +520,7 @@
                   </p>
                 </div>
                 <svg
-                  class="high-sm:hidden absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
+                  class="absolute left-0 ml-[.1rem] hidden w-[70px] rotate-[255deg] sm:top-0 sm:block high-sm:hidden lg:top-12 lg:ml-8 lg:block lg:w-[126px] lg:rotate-[268deg]"
                   width="126"
                   height="124"
                   viewBox="0 0 126 129"
@@ -740,7 +740,7 @@
       </section>
       <div class="mx-4">
         <div
-          class="container-w bg-green-demo high-sm:rounded-full !mx-auto !my-40 flex flex-col items-center justify-between rounded-2xl bg-[#EAF7F0] bg-cover bg-center bg-no-repeat md:flex-row md:bg-transparent"
+          class="container-w !mx-auto !my-40 flex flex-col items-center justify-between rounded-2xl bg-[#EAF7F0] bg-green-demo bg-cover bg-center bg-no-repeat high-sm:rounded-full md:flex-row md:bg-transparent"
         >
           <div
             class="flex flex-col items-center gap-3 p-3 font-medium sm:flex-row"
@@ -840,13 +840,12 @@
     </main>
     <footer class="mx-4 space-y-10 border-t pt-10">
       <div
-        class="container-w mx-3 flex flex-col items-center justify-between rounded-full bg-request-form bg-cover bg-center bg-no-repeat mid-sm:flex-row"
+        class="container-w mx-3 hidden items-center justify-between rounded-full bg-request-form bg-cover bg-center bg-no-repeat mid-sm:flex"
       >
         <div class="flex items-center gap-3 p-3">
           <svg
             width="40"
             height="40"
-            class="hidden mid-sm:block"
             viewBox="0 0 65 65"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
@@ -860,17 +859,14 @@
               fill="#F9B233"
             />
           </svg>
-          <p class="text-center sm:text-left">
-            اتصال هوشمند به بیش از صد هتل و اقامتگاه در کل کشور
-          </p>
+          <p>اتصال هوشمند به بیش از صد هتل و اقامتگاه در کل کشور</p>
         </div>
         <div>
           <div>
             <button
-              class="mb-3 flex items-center gap-2 rounded-full border border-white bg-orange-400 p-1 px-2 font-bold text-white mid-sm:mb-0 md:bg-transparent"
+              class="flex items-center gap-2 rounded-full border border-white p-1 px-2 font-bold text-white transition-all duration-700 hover:brightness-95"
             >
               درخواست دمو<svg
-                class=""
                 width="30"
                 height="30"
                 viewBox="0 0 34 34"
@@ -890,13 +886,6 @@
             </button>
           </div>
         </div>
-      </div>
-      <div class="absolute right-0 z-10 hidden md:block">
-        <img
-          src="/assets/images/pattern-4.png"
-          class="h-[39rem] w-[26rem]"
-          alt=""
-        />
       </div>
       <div class="absolute left-0 hidden md:block">
         <img class="h-[39rem]" src="/assets/images/pattern-6.png" alt="" />
@@ -946,19 +935,19 @@
           <div>
             <p class="text-2xl font-bold">دسترسی سریع</p>
             <ul class="mt-4 space-y-5">
-              <li>تماس با ما</li>
-              <li>درباره ما</li>
-              <li>درخواست دمو</li>
-              <li>مقالات</li>
+              <li><a href="">تماس با ما</a></li>
+              <li><a href="">درباره ما</a></li>
+              <li><a href="">درخواست دمو</a></li>
+              <li><a href="">مقالات</a></li>
             </ul>
           </div>
           <div>
             <p class="text-2xl font-bold">محصول</p>
             <ul class="mt-4 space-y-5">
-              <li>قیمت ها</li>
-              <li>سوالات متداول</li>
-              <li>پشتیبانی</li>
-              <li>راهکار ها</li>
+              <li><a href="/prices/">قیمت ها</a></li>
+              <li><a href="">سوالات متداول</a></li>
+              <li><a href="">پشتیبانی</a></li>
+              <li><a href="">راهکارها</a></li>
             </ul>
           </div>
         </div>
