--- a/src/solutions/index.html
+++ b/src/solutions/index.html
@@ -62,12 +62,12 @@
           <li
             class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
           >
-            <a href="solutions.html">راهکار ها</a>
+            <a href="/solutions/">راهکار ها</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="">قیمت ها</a>
+            <a href="/prices/">قیمت ها</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -127,21 +127,21 @@
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">صفحه اصلی</a>
+                      <a href="/">صفحه اصلی</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
                       <a
                         class="active relative text-black after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
-                        href="solutions.html"
+                        href="/solutions/"
                         >راهکار ها</a
                       >
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">قیمت ها</a>
+                      <a href="/prices/">قیمت ها</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -307,11 +307,12 @@
                 </li>
               </ul>
               <div class="flex items-center gap-2 self-end">
-                <button
+                <a
+                  href="/solutions/hotels/"
                   class="text-nowrap rounded-full bg-gray-100 p-2 px-4 font-semibold"
                 >
                   بیشتر بخوانید
-                </button>
+                </a>
                 <button>
                   <svg
                     width="40"
@@ -361,9 +362,12 @@
                 </li>
               </ul>
               <div class="flex items-center gap-2 self-end">
-                <button class="rounded-full bg-white p-2 px-4 font-semibold">
+                <a
+                  href="/solutions/management-of-chain-hotels/"
+                  class="rounded-full bg-white p-2 px-4 font-semibold"
+                >
                   بیشتر بخوانید
-                </button>
+                </a>
                 <button>
                   <svg
                     width="40"
@@ -792,7 +796,7 @@
         <div>
           <div>
             <button
-              class="flex items-center gap-2 rounded-full border border-white p-1 px-2 font-bold text-white"
+              class="flex items-center gap-2 rounded-full border border-white p-1 px-2 font-bold text-white transition-all duration-700 hover:brightness-95"
             >
               درخواست دمو<svg
                 width="30"
@@ -863,19 +867,19 @@
           <div>
             <p class="text-2xl font-bold">دسترسی سریع</p>
             <ul class="mt-4 space-y-5">
-              <li>تماس با ما</li>
-              <li>درباره ما</li>
-              <li>درخواست دمو</li>
-              <li>مقالات</li>
+              <li><a href="">تماس با ما</a></li>
+              <li><a href="">درباره ما</a></li>
+              <li><a href="">درخواست دمو</a></li>
+              <li><a href="">مقالات</a></li>
             </ul>
           </div>
           <div>
             <p class="text-2xl font-bold">محصول</p>
             <ul class="mt-4 space-y-5">
-              <li>قیمت ها</li>
-              <li>سوالات متداول</li>
-              <li>پشتیبانی</li>
-              <li>راهکار ها</li>
+              <li><a href="/prices/">قیمت ها</a></li>
+              <li><a href="">سوالات متداول</a></li>
+              <li><a href="">پشتیبانی</a></li>
+              <li><a href="">راهکارها</a></li>
             </ul>
           </div>
         </div>
