--- a/src/index.html
+++ b/src/index.html
@@ -68,12 +68,12 @@
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="solutions.html">راهکار ها</a>
+            <a href="/solutions/">راهکار ها</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="">قیمت ها</a>
+            <a href="/prices/">قیمت ها</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -140,12 +140,12 @@
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="solutions.html">راهکار ها</a>
+                      <a href="/solutions/">راهکار ها</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">قیمت ها</a>
+                      <a href="/prices/">قیمت ها</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -2050,19 +2050,19 @@
           <div>
             <p class="text-2xl font-bold">دسترسی سریع</p>
             <ul class="mt-4 space-y-5">
-              <li>تماس با ما</li>
-              <li>درباره ما</li>
-              <li>درخواست دمو</li>
-              <li>مقالات</li>
+              <li><a href="">تماس با ما</a></li>
+              <li><a href="">درباره ما</a></li>
+              <li><a href="">درخواست دمو</a></li>
+              <li><a href="">مقالات</a></li>
             </ul>
           </div>
           <div>
             <p class="text-2xl font-bold">محصول</p>
             <ul class="mt-4 space-y-5">
-              <li>قیمت ها</li>
-              <li>سوالات متداول</li>
-              <li>پشتیبانی</li>
-              <li>راهکار ها</li>
+              <li><a href="/prices/">قیمت ها</a></li>
+              <li><a href="">سوالات متداول</a></li>
+              <li><a href="">پشتیبانی</a></li>
+              <li><a href="">راهکارها</a></li>
             </ul>
           </div>
         </div>
