--- a/src/prices/index.html
+++ b/src/prices/index.html
@@ -66,12 +66,12 @@
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
           >
-            <a href="solutions.html">راهکار ها</a>
+            <a href="/solutions/">راهکار ها</a>
           </li>
           <li
             class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
           >
-            <a href="../prices/">قیمت ها</a>
+            <a href="/prices/">قیمت ها</a>
           </li>
           <li
             class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -131,17 +131,17 @@
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="">صفحه اصلی</a>
+                      <a href="/">صفحه اصلی</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
                     >
-                      <a href="solutions.html">راهکار ها</a>
+                      <a href="/solutions/">راهکار ها</a>
                     </li>
                     <li
                       class="active relative text-black after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
                     >
-                      <a href="">قیمت ها</a>
+                      <a href="/prices/">قیمت ها</a>
                     </li>
                     <li
                       class="text-gray-800 transition-all duration-700 hover:brightness-50"
@@ -720,7 +720,7 @@
         <div>
           <div>
             <button
-              class="flex items-center gap-2 rounded-full border border-white p-1 px-2 font-bold text-white"
+              class="flex items-center gap-2 rounded-full border border-white p-1 px-2 font-bold text-white transition-all duration-700 hover:brightness-95"
             >
               درخواست دمو<svg
                 width="30"
@@ -791,19 +791,19 @@
           <div>
             <p class="text-2xl font-bold">دسترسی سریع</p>
             <ul class="mt-4 space-y-5">
-              <li>تماس با ما</li>
-              <li>درباره ما</li>
-              <li>درخواست دمو</li>
-              <li>مقالات</li>
+              <li><a href="">تماس با ما</a></li>
+              <li><a href="">درباره ما</a></li>
+              <li><a href="">درخواست دمو</a></li>
+              <li><a href="">مقالات</a></li>
             </ul>
           </div>
           <div>
             <p class="text-2xl font-bold">محصول</p>
             <ul class="mt-4 space-y-5">
-              <li>قیمت ها</li>
-              <li>سوالات متداول</li>
-              <li>پشتیبانی</li>
-              <li>راهکار ها</li>
+              <li><a href="/prices/">قیمت ها</a></li>
+              <li><a href="">سوالات متداول</a></li>
+              <li><a href="">پشتیبانی</a></li>
+              <li><a href="">راهکارها</a></li>
             </ul>
           </div>
         </div>
